# secrets-finder

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  docker-compose.dev.yml
.github/workflows/: api.js  api.test.js  github-issues.js  package.json  pre-commit-hooks.yaml  secrets-detection-pull-request.yaml  secrets-detection-push.yaml
configuration/secrets-finder/: common.py  common.requirements.txt
configuration/secrets-finder/aws/: aws_ec2_instances.json  backend.env  backend.py  backend.requirements.txt  finalizer.py  initializer.py  setup.sh
configuration/secrets-finder/scanner/: git-credentials-helper.sh  scan-configuration.schema.json  scanner.env  scanner.py  scanner.requirements.txt  scanner.service
infrastructure/ingestion/aws/: README.md  cloudwatch.tf  iam.tf  lambda.tf  locals.tf  outputs.tf  providers.tf  rds.tf  s3.tfbackend  secrets.tf  securitygroups.tf  sfn.tf  terraform.tfvars.example  variables.tf  vpc.tf
infrastructure/ingestion/aws/lambda/ingestion/: README.md  ingestion.py  package.sh  pyproject.toml
infrastructure/ingestion/aws/lambda/ingestion/modules/: findings_ingestion.py
infrastructure/ingestion/aws/lambda/ingestion/modules/common/: s3.py  utils.py
migrations/: README.md  alembic.ini  migrate.py  pyproject.toml
migrations/db/: env.py
migrations/db/versions/: 9fab027609bc_create_scans_table.py  ac05203c65bd_create_findings_table.py  db4e0564e6df_create_jobs_table.py
scripts/inventory/github_inventory/: .env.example  README.md  pyproject.toml  settings.toml
scripts/inventory/github_inventory/github_inventory/: __main__.py  config.py  main.py
scripts/inventory/github_inventory/github_inventory/graphql_queries/: organization_repositories.graphql  repository_details.graphql
(+72 files in other folders)
